# imagine

./: .gitignore  README.md  pyproject.toml
models/: stable-diffusion-v1-5.mar
src/imagine/: __init__.py  app.py
src/imagine/config/: app.yaml  client.yaml
src/imagine/config/models/qwen/: image_edit.yaml
src/imagine/database/: __init__.py
src/imagine/model/: client.py  utils.py
src/imagine/model/qwen/: image.py  image_edit.py
src/imagine/model/qwen/config/: image.yaml  image_edit.yaml
src/imagine/models/qwen/: image_edit.py
src/imagine/static/js/: app.js
src/imagine/static/js/components/: ImagePreviewModal.js  SettingsPanel.js
src/imagine/templates/: index.html
