[tool.poetry]
name = "imagine"
version = "0.1.0"
description = ""
authors = ["dnl-strnl <129630837+dnl-strnl@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "imagine", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
hydra-core = "^1.3.2"
flask = "^3.1.0"
pillow = "^11.1.0"
omegaconf = "^2.3.0"
numpy = "^2.2.1"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
